fixed nav problem of other divs covering it when scrolling

--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -1,5 +1,6 @@
 .navDiv{
     background-color: #f1f4f7;
+    z-index:1;
     display: flex;
     flex-direction: row;
     align-content: center;
